--- a/Resources/Private/Partials/Finder/List.html
+++ b/Resources/Private/Partials/Finder/List.html
@@ -1,12 +1,24 @@
-<table border="1">
-    <tr>
-        <th>Page</th>
-        <th>list_type</th>
-    </tr>
-    <f:for each="{entities}" as="entity">
+<table class="table table-striped table-responsive">
+    <thead>
         <tr>
-            <td>{entity.title} ({entity.uid})</td>
-            <td>{entity.list_type}</td>
+            <th>PID</th>
+            <th>Page</th>
+            <th>list_type</th>
+            <th>colPos</th>
+            <th>Element deleted</th>
+            <th>Page deleted</th>
         </tr>
-    </f:for>
+    </thead>
+    <tbody>
+        <f:for each="{entities}" as="entity">
+            <tr>
+                <td>{entity.pagesUid}</td>
+                <td>{entity.pageTitle}</td>
+                <td>{entity.list_type}</td>
+                <td>{entity.colPos}</td>
+                <td>{entity.contentDeleted}</td>
+                <td>{entity.pagesDeleted}</td>
+            </tr>
+        </f:for>
+    </tbody>    
 </table>
