--- a/Resources/Private/Layouts/Layout.html
+++ b/Resources/Private/Layouts/Layout.html
@@ -1,6 +1,8 @@
 <f:be.container
-    includeCssFiles="{0: '{f:uri.resource(path:\'vendor/twitter/bootstrap/3.3.4/css/bootstrap.min.css\')}'}"
+    includeCssFiles="{0: '{f:uri.resource(path:\'vendor/twitter/bootstrap/3.3.4/css/bootstrap.min.css\')}', 
+    1: '{f:uri.resource(path:\'vendor/twitter/bootstrap/3.3.4/css/bootstrap-theme.min.css\')}'}" 
     includeJsFiles="{0: '{f:uri.resource(path:\'vendor/twitter/bootstrap/3.3.4/js/bootstrap.min.js\')}'}"
+    loadPrototype="false"
     loadJQuery="true">
     <div class="typo3-fullDoc">
         <div id="typo3-docheader">
@@ -26,7 +28,6 @@
             <div id="typo3-inner-docbody"  class="container-fluid">
                 <f:render section="Content" />
             </div>
-        </div>
-        
+        </div>    
     </div>
 </f:be.container>
