--- a/Resources/Private/Partials/Finder/Dependencies.html
+++ b/Resources/Private/Partials/Finder/Dependencies.html
@@ -1,9 +1,12 @@
 <div class="row">
-    <f:if condition="{extDependencies}">
-        <ul>
-            <f:for each="{extDependencies}" as="val" key="key">
-                <li>{val.title} ({key})</li>
-            </f:for>
-        </ul>
-    </f:if>
+    <div class="col-lg-12">
+        <br />
+        <f:if condition="{extDependencies}">
+            <ul>
+                <f:for each="{extDependencies}" as="val" key="key">
+                    <li>{val.title} ({key})</li>
+                </f:for>
+            </ul>
+        </f:if>
+    </div>
 </div>
