--- a/Resources/Private/Partials/Finder/ExtensionInfo.html
+++ b/Resources/Private/Partials/Finder/ExtensionInfo.html
@@ -1,39 +1,72 @@
 <div class='row'>
-    <table class="table table-striped table-responsive">
-        <tr>
-            <th>Title:</th>
+    <div class="col-lg-12">
+        <br />
+        <table class="table table-striped table-responsive">
+            <tr>
+                <th><f:translate key="view.finder.index.extensionInfo.title" /></th>
             <td>{extInfo.title}</td>
-        </tr>
-        <tr>
-            <th>Description:</th>
+            </tr>
+            <tr>
+                <th><f:translate key="view.finder.index.extensionInfo.description" /></th>
             <td>{extInfo.description}</td>
-        </tr>
-        <tr>
-            <th>Category:</th>
+            </tr>
+            <tr>
+                <th><f:translate key="view.finder.index.extensionInfo.category" /></th>
             <td>{extInfo.category}</td>
-        </tr>
-        <tr>
-            <th>Author:</th>
+            </tr>
+            <tr>
+                <th><f:translate key="view.finder.index.extensionInfo.author" /></th>
             <td>{extInfo.author}</td>
-        </tr>
-        <tr>
-            <th>Author E-Mail:</th>
+            </tr>
+            <tr>
+                <th><f:translate key="view.finder.index.extensionInfo.author.email" /></th>
             <td>{extInfo.author_email}</td>
-        </tr>
-        <tr>
-            <th>Version:</th>
+            </tr>
+            <tr>
+                <th><f:translate key="view.finder.index.extensionInfo.version" /></th>
             <td>{extInfo.version} ({extInfo.state})</td>
-        </tr>
-        <tr>
-            <th>Constaints:</th>
-            <td>
-                <div><strong>Depends</strong></div>
-                <ul>
-                    <f:for each="{extInfo.constraints.depends}" as="value" key="key">
-                        <li>{key} ({value})</li>
-                    </f:for>
-                </ul>
-            </td>
-        </tr>
-    </table>
+            </tr>
+            <tr>
+                <th><f:translate key="view.finder.index.extensionInfo.constraints" /></th>
+                <td>
+                    <f:if condition='{extInfo.constraints.depends}'>
+                        <div>
+                            <strong>
+                                <f:translate key="view.finder.index.extensionInfo.constraints.depends" />
+                            </strong>
+                        </div>
+                        <ul>
+                            <f:for each="{extInfo.constraints.depends}" as="value" key="key">
+                                <li>{key} ({value})</li>
+                            </f:for>
+                        </ul>
+                    </f:if>
+                    <f:if condition='{extInfo.constraints.conflicts}'>
+                        <div>
+                            <strong>
+                                <f:translate key="view.finder.index.extensionInfo.constraints.conflicts" />
+                            </strong>
+                        </div>
+                        <ul>
+                            <f:for each="{extInfo.constraints.conflicts}" as="value" key="key">
+                                <li>{key} ({value})</li>
+                            </f:for>
+                        </ul>
+                    </f:if>
+                    <f:if condition='{extInfo.constraints.suggests}'>
+                        <div>
+                            <strong>
+                                <f:translate key="view.finder.index.extensionInfo.constraints.suggests" />
+                            </strong>
+                        </div>
+                        <ul>
+                            <f:for each="{extInfo.constraints.suggests}" as="value" key="key">
+                                <li>{key} ({value})</li>
+                            </f:for>
+                        </ul>
+                    </f:if>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
