--- a/Resources/Private/Partials/Finder/Usage.html
+++ b/Resources/Private/Partials/Finder/Usage.html
@@ -1,35 +1,59 @@
 <div class='container-fluid'>
     <div class="row">
-        <div class="alert alert-info" role="alert">
-            <p><strong><f:translate key="view.finder.index.matches" />:</strong> {entities -> f:count()}</p>
+        <div class="col-lg-12">
+            <br />
+            <div class="alert alert-info" role="alert">
+                <p><strong><f:translate key="view.finder.index.matches" />:</strong> {entities -> f:count()}</p>
+            </div>
         </div>
     </div>
     <f:if condition="{entities}">
         <div class="row">
-            <table class="table table-striped table-responsive">
-                <thead>
-                    <tr>
-                        <th>UID</th>
-                        <th>Page [Page UID]</th>
-                        <th>list_type</th>
-                        <th>colPos</th>
-                        <th>Element deleted</th>
-                        <th>Page deleted</th>
+            <div class="col-lg-12">
+                <br />
+                <table class="table table-striped table-responsive">
+                    <thead>
+                        <tr>
+                            <th>
+                    <f:translate key="view.finder.index.usage.tableHead.uid" />
+                    </th>
+                    <th>
+                    <f:translate key="view.finder.index.usage.tableHead.page" />
+                    </th>
+                    <th>
+                    <f:translate key="view.finder.index.usage.tableHead.list_type" />
+                    </th>
+                    <th>
+                    <f:translate key="view.finder.index.usage.tableHead.colPos" />
+                    </th>
+                    <th>
+                    <f:translate key="view.finder.index.usage.tableHead.elementDeleted" />
+                    </th>
+                    <th>
+                    <f:translate key="view.finder.index.usage.tableHead.pageDeleted" />
+                    </th>
                     </tr>
-                </thead>
-                <tbody>
-                <f:for each="{entities}" as="entity">
-                    <tr>
-                        <td>{entity.contentUid}</td>
-                        <td>{entity.pageTitle} [{entity.pagesUid}]</td>
-                        <td>{entity.list_type}</td>
-                        <td>{entity.colPos}</td>
-                        <td>{entity.contentDeleted}</td>
-                        <td>{entity.pagesDeleted}</td>
-                    </tr>
-                </f:for>
-                </tbody>    
-            </table>
+                    </thead>
+                    <tbody>
+                    <f:for each="{entities}" as="entity">
+                        <tr>
+                            <td>
+                                {entity.contentUid}
+                            </td>
+                            <td>
+                                <a href="/typo3/sysext/cms/layout/db_layout.php?id={entity.pagesUid}" 
+                                   target="content"
+                                   title="{f:translate(key: 'view.finder.index.linkTitle.viewPage')}">{entity.pageTitle}</a>
+                            </td>
+                            <td>{entity.list_type}</td>
+                            <td>{entity.colPos}</td>
+                            <td>{entity.contentDeleted}</td>
+                            <td>{entity.pagesDeleted}</td>
+                        </tr>
+                    </f:for>
+                    </tbody>    
+                </table>
+            </div>
         </div>
     </f:if>
 </div>
