--- a/Resources/Private/Layouts/Layout.html
+++ b/Resources/Private/Layouts/Layout.html
@@ -2,7 +2,7 @@
     includeCssFiles="{0: '{f:uri.resource(path:\'vendor/twitter/bootstrap/3.3.4/css/bootstrap.min.css\')}', 
     1: '{f:uri.resource(path:\'vendor/twitter/bootstrap/3.3.4/css/bootstrap-theme.min.css\')}'}" 
     includeJsFiles="{0: '{f:uri.resource(path:\'vendor/twitter/bootstrap/3.3.4/js/bootstrap.min.js\')}'}"
-    loadPrototype="false"
+    loadPrototype="true"
     loadJQuery="true">
     <div class="typo3-fullDoc">
         <div id="typo3-docheader">
