--- a/Resources/Private/Partials/Finder/Dependencies.html
+++ b/Resources/Private/Partials/Finder/Dependencies.html
@@ -1,7 +1,11 @@
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+      data-namespace-typo3-fluid="true">
+
 <div class="row">
     <div class="col-lg-12">
-        <br />
+        <br/>
         <f:if condition="{extDependencies}">
+            <p>EXT:{newFinder.extensionKey} is used by:</p>
             <ul>
                 <f:for each="{extDependencies}" as="val" key="key">
                     <li>{val.title} ({key})</li>
@@ -10,3 +14,5 @@
         </f:if>
     </div>
 </div>
+
+</html>
