--- a/Resources/Private/Partials/Finder/ExtensionInfo.html
+++ b/Resources/Private/Partials/Finder/ExtensionInfo.html
@@ -1,38 +1,55 @@
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+      data-namespace-typo3-fluid="true">
+
 <div class='row'>
     <div class="col-lg-12">
-        <br />
+        <br/>
         <table class="table table-striped table-responsive">
             <tr>
-                <th><f:translate key="view.finder.index.extensionInfo.title" /></th>
-            <td>{extInfo.title}</td>
+                <th>
+                    <f:translate key="view.finder.index.extensionInfo.title"/>
+                </th>
+                <td>{extInfo.title}</td>
             </tr>
             <tr>
-                <th><f:translate key="view.finder.index.extensionInfo.description" /></th>
-            <td>{extInfo.description}</td>
+                <th>
+                    <f:translate key="view.finder.index.extensionInfo.description"/>
+                </th>
+                <td>{extInfo.description}</td>
             </tr>
             <tr>
-                <th><f:translate key="view.finder.index.extensionInfo.category" /></th>
-            <td>{extInfo.category}</td>
+                <th>
+                    <f:translate key="view.finder.index.extensionInfo.category"/>
+                </th>
+                <td>{extInfo.category}</td>
             </tr>
             <tr>
-                <th><f:translate key="view.finder.index.extensionInfo.author" /></th>
-            <td>{extInfo.author}</td>
+                <th>
+                    <f:translate key="view.finder.index.extensionInfo.author"/>
+                </th>
+                <td>{extInfo.author}</td>
             </tr>
             <tr>
-                <th><f:translate key="view.finder.index.extensionInfo.author.email" /></th>
-            <td>{extInfo.author_email}</td>
+                <th>
+                    <f:translate key="view.finder.index.extensionInfo.author.email"/>
+                </th>
+                <td>{extInfo.author_email}</td>
             </tr>
             <tr>
-                <th><f:translate key="view.finder.index.extensionInfo.version" /></th>
-            <td>{extInfo.version} ({extInfo.state})</td>
+                <th>
+                    <f:translate key="view.finder.index.extensionInfo.version"/>
+                </th>
+                <td>{extInfo.version} ({extInfo.state})</td>
             </tr>
             <tr>
-                <th><f:translate key="view.finder.index.extensionInfo.constraints" /></th>
+                <th>
+                    <f:translate key="view.finder.index.extensionInfo.constraints"/>
+                </th>
                 <td>
                     <f:if condition='{extInfo.constraints.depends}'>
                         <div>
                             <strong>
-                                <f:translate key="view.finder.index.extensionInfo.constraints.depends" />
+                                <f:translate key="view.finder.index.extensionInfo.constraints.depends"/>
                             </strong>
                         </div>
                         <ul>
@@ -44,7 +61,7 @@
                     <f:if condition='{extInfo.constraints.conflicts}'>
                         <div>
                             <strong>
-                                <f:translate key="view.finder.index.extensionInfo.constraints.conflicts" />
+                                <f:translate key="view.finder.index.extensionInfo.constraints.conflicts"/>
                             </strong>
                         </div>
                         <ul>
@@ -56,7 +73,7 @@
                     <f:if condition='{extInfo.constraints.suggests}'>
                         <div>
                             <strong>
-                                <f:translate key="view.finder.index.extensionInfo.constraints.suggests" />
+                                <f:translate key="view.finder.index.extensionInfo.constraints.suggests"/>
                             </strong>
                         </div>
                         <ul>
@@ -70,3 +87,5 @@
         </table>
     </div>
 </div>
+
+</html>
