--- a/Resources/Private/Partials/Finder/Usage.html
+++ b/Resources/Private/Partials/Finder/Usage.html
@@ -1,37 +1,44 @@
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+      xmlns:self="http://typo3.org/ns/Sle/Extensionusagefinder/ViewHelpers"
+      data-namespace-typo3-fluid="true">
+
 <div class='container-fluid'>
     <div class="row">
         <div class="col-lg-12">
-            <br />
+            <br/>
             <div class="alert alert-info" role="alert">
-                <p><strong><f:translate key="view.finder.index.matches" />:</strong> {entities -> f:count()}</p>
+                <p><strong>
+                    <f:translate key="view.finder.index.matches"/>
+                    :</strong> {entities -> f:count()}
+                </p>
             </div>
         </div>
     </div>
     <f:if condition="{entities}">
         <div class="row">
             <div class="col-lg-12">
-                <br />
+                <br/>
                 <table class="table table-striped table-responsive">
                     <thead>
-                        <tr>
-                            <th>
-                    <f:translate key="view.finder.index.usage.tableHead.uid" />
-                    </th>
-                    <th>
-                    <f:translate key="view.finder.index.usage.tableHead.page" />
-                    </th>
-                    <th>
-                    <f:translate key="view.finder.index.usage.tableHead.list_type" />
-                    </th>
-                    <th>
-                    <f:translate key="view.finder.index.usage.tableHead.colPos" />
-                    </th>
-                    <th>
-                    <f:translate key="view.finder.index.usage.tableHead.elementDeleted" />
-                    </th>
-                    <th>
-                    <f:translate key="view.finder.index.usage.tableHead.pageDeleted" />
-                    </th>
+                    <tr>
+                        <th>
+                            <f:translate key="view.finder.index.usage.tableHead.uid"/>
+                        </th>
+                        <th>
+                            <f:translate key="view.finder.index.usage.tableHead.page"/>
+                        </th>
+                        <th>
+                            <f:translate key="view.finder.index.usage.tableHead.list_type"/>
+                        </th>
+                        <th>
+                            <f:translate key="view.finder.index.usage.tableHead.colPos"/>
+                        </th>
+                        <th>
+                            <f:translate key="view.finder.index.usage.tableHead.elementDeleted"/>
+                        </th>
+                        <th>
+                            <f:translate key="view.finder.index.usage.tableHead.pageDeleted"/>
+                        </th>
                     </tr>
                     </thead>
                     <tbody>
@@ -51,9 +58,11 @@
                             <td>{entity.pagesDeleted}</td>
                         </tr>
                     </f:for>
-                    </tbody>    
+                    </tbody>
                 </table>
             </div>
         </div>
     </f:if>
 </div>
+
+</html>
