--- a/Resources/Private/Templates/Finder/Index.html
+++ b/Resources/Private/Templates/Finder/Index.html
@@ -1,11 +1,16 @@
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+      data-namespace-typo3-fluid="true">
+
 <f:layout name="Layout" />
 
-<f:section name="Content">
+<f:section name="content">
+    <h1>Extension Usages</h1>
     <div class="row">
         <div class="col-lg-12">
             <f:render partial="Finder/Filter" arguments="{newFinder: newFinder, extensions: extensions}"/>
         </div>
     </div>
+    <br>
     <f:if condition="{newFinder.extensionKey}">
         <div class="row">
             <div class="col-lg-12">
@@ -26,7 +31,7 @@
                         <f:render partial="Finder/Usage" arguments="{entities: entities}" />
                     </div>
                     <div role="tabpanel" class="tab-pane fade" id="dependencies">
-                        <f:render partial="Finder/Dependencies" arguments="{extDependencies: extDependencies}" />
+                        <f:render partial="Finder/Dependencies" arguments="{extDependencies: extDependencies, newFinder: newFinder}" />
                     </div>
                     <div role="tabpanel" class="tab-pane fade" id="extension-info">
                         <f:render partial="Finder/ExtensionInfo" arguments="{extInfo: extInfo}" />
@@ -36,3 +41,5 @@
         </div>
     </f:if>
 </f:section>
+
+</html>
